<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <TextView
        android:id="@+id/dialhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dialhead"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/dialrgrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialhead" >

        <RadioButton
            android:id="@+id/dialrad1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/dialrad1" />

        <RadioButton
            android:id="@+id/dialrad2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialrad2" />
    </RadioGroup>

    <EditText
        android:id="@+id/dialinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dialrgrp"
        android:layout_toRightOf="@+id/dialrgrp"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/dialCan"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/dialSub"
        android:layout_alignBottom="@+id/dialSub"
        android:layout_alignParentRight="true"
        android:text="@string/Can" />

    <Button
        android:id="@+id/dialSub"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/dialrgrp"
        android:layout_below="@+id/dialrgrp"
        android:layout_marginTop="20dp"
        android:text="@string/Sub" />

</RelativeLayout>