<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Alreadysub"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/dial2Can"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/dial2Unsub"
        android:layout_alignBottom="@+id/dial2Unsub"
        android:layout_alignParentRight="true"
        android:text="@string/Can" />

    <Button
        android:id="@+id/dial2Unsub"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:text="@string/Unsub" />

</RelativeLayout>