<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrnd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ViewFlipper
        android:id="@+id/flipper1"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="false"
        android:flipInterval="3000"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right" >

        <ImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/coll" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/coll" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/coll" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/coll" />
    </ViewFlipper>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/imageButton4"
        android:layout_marginLeft="5dp"
        android:text="@string/exit" />

    <!--
    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <com.swaf.showtimebuzzer.MyHorizontalLayout
            android:id="@+id/mygallery"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal" >
        </com.swaf.showtimebuzzer.MyHorizontalLayout>
    </HorizontalScrollView>
    -->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageButton6"
        android:layout_below="@+id/imageButton6"
        android:text="@string/alarmtone" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/imageButton5"
        android:layout_marginLeft="18dp"
        android:text="@string/update" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageButton2"
        android:layout_below="@+id/imageButton2"
        android:text="@string/coll" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flipper1"
        android:layout_marginRight="26dp"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/textView5"
        android:background="@null"
        android:contentDescription="@string/str"
        android:src="@drawable/archiveicon" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/imageButton1"
        android:layout_marginRight="14dp"
        android:text="@string/Search" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_below="@+id/textView3"
        android:background="@null"
        android:contentDescription="@string/str"
        android:src="@drawable/greenok" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:background="@null"
        android:contentDescription="@string/str"
        android:src="@drawable/calendericon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginLeft="60dp"
        android:text="@string/week" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/textView3"
        android:background="@null"
        android:contentDescription="@string/str"
        android:cropToPadding="true"
        android:src="@drawable/searchicon" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_alignTop="@+id/imageButton5"
        android:background="@null"
        android:contentDescription="@string/str"
        android:src="@drawable/exiticon" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton4"
        android:layout_alignTop="@+id/imageButton3"
        android:background="@null"
        android:contentDescription="@string/str"
        android:src="@drawable/music" />

</RelativeLayout>